# warp

./: .clinerules  .dockerignore  .gitignore  AI_WORKFLOW.md  CHANGELOG.md  Cargo.toml  DOCKER.md  DOCKER_FILES_SUMMARY.txt  DOCKER_QUICKSTART.md  Dockerfile  Dockerfile.gpu  GAP_ANALYSIS.md  IMPLEMENTATION_STATUS.md  README.md  TODO.md  docker-compose.dev.yml  docker-compose.yml  workflow.sh
.ai/plans/: 002_warp_portal_master.md  archive_mode_foundation.md
.ai/progress/: current.md  portal_tracker.md  template.md
.ai/prompts/: implement.md  plan.md  research.md
.ai/research/: archive_mode_foundation.md
.cargo/: config.toml
.claude/agents/: cuda-gpu-expert.md
.github/workflows/: benchmarks.yml  ci.yml  security.yml
crates/portal-core/: Cargo.toml
crates/portal-core/src/: access.rs  encryption.rs  keys.rs  lib.rs  portal.rs
crates/portal-hub/: Cargo.toml
crates/portal-hub/src/: auth.rs  ephemeral_auth.rs  lib.rs  persistence.rs  replication.rs  routes.rs  server.rs  storage.rs
crates/portal-net/: Cargo.toml
crates/portal-net/src/: allocator.rs  coordinator.rs  discovery.rs  lib.rs  manager.rs  peer.rs  types.rs
crates/portal-net/tests/: manager_loom.rs  manager_shuttle.rs
crates/warp-api/: Cargo.toml
crates/warp-api/src/: lib.rs  routes.rs  server.rs  types.rs
crates/warp-block/: Cargo.toml
crates/warp-block/benches/: nvmeof_bench.rs
crates/warp-block/src/: error.rs  extent.rs  lib.rs  server.rs  snapshot.rs  thin.rs
crates/warp-block/src/nbd/: connection.rs  mod.rs
crates/warp-block/src/nvmeof/: capsule.rs  command.rs  config.rs  connection.rs  discovery.rs  error.rs  mod.rs  namespace.rs  queue.rs  subsystem.rs  target.rs
crates/warp-block/src/nvmeof/transport/: mod.rs  quic.rs  rdma.rs  tcp.rs
crates/warp-block/tests/: nvmeof_integration.rs
crates/warp-chonkers/src/: chunk.rs  config.rs  layer.rs  lib.rs  simd.rs
crates/warp-cli/: Cargo.toml
crates/warp-cli/src/: completions.rs  lib.rs  main.rs
crates/warp-compress/: Cargo.toml
crates/warp-compress/benches/: compression.rs
crates/warp-compress/examples/: entropy_bench.rs
crates/warp-compress/src/: adaptive.rs  dictionary.rs  lib.rs
crates/warp-compress/src/cpu/: lz4.rs  mod.rs  zstd.rs
crates/warp-compress/src/gpu/: batch.rs  context.rs  lz4.rs  mod.rs  zstd.rs
crates/warp-config/: Cargo.toml
crates/warp-config/src/: config.rs  lib.rs  validate.rs
crates/warp-core/: Cargo.toml
crates/warp-core/examples/: archive_roundtrip.rs  basic_chunking.rs  (+3 more)
crates/warp-crdt/: Cargo.toml
crates/warp-crdt/src/: g_counter.rs  hlc.rs  lib.rs  lww_register.rs  merge.rs  or_set.rs  pn_counter.rs
crates/warp-crypto/: Cargo.toml
crates/warp-crypto/src/: encrypt.rs  kdf.rs  lib.rs  sign.rs  stream.rs
crates/warp-dashboard/: Cargo.toml
crates/warp-dashboard/src/: handlers.rs  ipc.rs  lib.rs  server.rs  templates.rs  types.rs
crates/warp-dashboard/templates/: base.html  edges.html  index.html  metrics.html  transfer_detail.html  transfers.html
crates/warp-dpu/: Cargo.toml
crates/warp-dpu/benches/: throughput.rs
crates/warp-dpu/src/: backend.rs  error.rs  fallback.rs  lib.rs  traits.rs
crates/warp-dpu/src/backends/: bluefield.rs  mod.rs  stub.rs
crates/warp-ec/: Cargo.toml
crates/warp-edge/: Cargo.toml
crates/warp-edge/src/: availability.rs  constraints.rs  health.rs  lib.rs  metrics.rs  registry.rs  types.rs
crates/warp-format/: Cargo.toml
crates/warp-fs/: Cargo.toml
crates/warp-fs/src/: error.rs  fuse_ops.rs  inode.rs  lib.rs  metadata.rs  vfs.rs
crates/warp-fs/src/cache/: data_cache.rs  dentry_cache.rs  inode_cache.rs  mod.rs
crates/warp-gpu/: Cargo.toml  DESIGN.md  IMPLEMENTATION_SUMMARY.md  KERNEL_OPTIMIZATION_GUIDE.md  QUICK_REFERENCE.md  README.md
crates/warp-gpu-mem/: Cargo.toml
crates/warp-gpu-mem/src/: cache.rs  config.rs  error.rs  lib.rs  pager.rs  pool.rs  prefetch.rs  spill.rs  tensor.rs
crates/warp-gpu/benches/: memory.rs
crates/warp-gpu/src/: backend.rs  blake3.rs  blake3_metal.rs  buffer.rs  chacha20.rs  chacha20_metal.rs  context.rs  error.rs  lib.rs  memory.rs  pooled.rs  stream.rs  traits.rs
crates/warp-gpu/src/backends/: cuda.rs  metal.rs
crates/warp-hash/: Cargo.toml
crates/warp-iam/: Cargo.toml
crates/warp-iam/src/: error.rs  identity.rs  ldap.rs  lib.rs  oidc.rs  policy.rs  session.rs
crates/warp-io/: Cargo.toml
crates/warp-io/benches/: chunking.rs
crates/warp-io/src/: async_chunker.rs  async_walker.rs  chunker.rs  fixed_chunker.rs  lib.rs  mmap.rs  pool.rs  simd.rs  walker.rs
crates/warp-io/src/uring/: async_io.rs  backend.rs  mod.rs  registered_buffers.rs
crates/warp-ipc/: Cargo.toml
crates/warp-ipc/src/: commands.rs  events.rs  lib.rs  types.rs
crates/warp-net/: Cargo.toml
crates/warp-orch/: Cargo.toml
crates/warp-sched/: Cargo.toml
crates/warp-sched/benches/: scheduler.rs
crates/warp-sched/src/: backpressure.rs  balance.rs  brain_link.rs  constraints.rs  cost.rs  dispatch.rs  failover.rs  lib.rs  paths.rs  reoptimize.rs  saturation.rs  scheduler.rs  slai_integration.rs  state.rs  types.rs
crates/warp-sched/tests/: stress.rs
crates/warp-store/: Cargo.toml
crates/warp-store-api/: Cargo.toml
crates/warp-stream/: Cargo.toml
crates/warp-stream/benches/: encryption.rs
crates/warp-stream/src/: config.rs  error.rs  flow.rs  gpu_crypto.rs  lib.rs  pipeline.rs  pooled.rs  stats.rs
crates/warp-telemetry/: Cargo.toml
crates/warp-telemetry/src/: lib.rs  metrics.rs
crates/warp-telemetry/src/logging/: mod.rs  tests.rs
crates/warp-tensor/: Cargo.toml
crates/warp-tensor/src/: checkpoint.rs  config.rs  error.rs  format.rs  lib.rs  model.rs  shard.rs  store.rs  tensor.rs
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: docker-build.sh  docker-test.sh
tests/: archive.rs  integration.rs  transfer.rs
warp-portal/: 06-SCHEDULER.md  09-GLOSSARY.md  ARCHITECTURE.md  DEVELOPMENT-PLAN.md  GPU-ACCELERATION.md  INTEGRITY.md  NETWORK.md  PORTAL-EXTENSIONS.md  PORTAL-SYSTEM.md  README.md  WARP-ENGINE.md
(+228 files in other folders)
