[package]
name = "portal-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Zero-knowledge portal core for distributed storage"

[dependencies]
# Internal warp crates
warp-crypto.workspace = true
warp-hash.workspace = true

# Cryptography
ed25519-dalek.workspace = true
chacha20poly1305.workspace = true
zeroize = { version = "1.8", features = ["derive"] }

# BIP-39 for recovery phrases
bip39 = { version = "2.1", features = ["rand"] }

# HKDF for key derivation
hkdf = "0.12"
sha2 = "0.10"

# Serialization
serde.workspace = true
rmp-serde.workspace = true

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUIDs for portal IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# Error handling
thiserror.workspace = true

# Utilities
bytes.workspace = true
rand.workspace = true

[dev-dependencies]
proptest.workspace = true
test-case.workspace = true
criterion.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
serde_json = "1.0"

[features]
default = []

[lints]
workspace = true
