[package]
name = "portal-hub"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Portal Hub server for coordinating distributed storage"

[dependencies]
# Internal crates
portal-core.workspace = true
warp-crypto.workspace = true
warp-hash.workspace = true

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio.workspace = true

# Cryptography
ed25519-dalek.workspace = true

# Serialization
serde.workspace = true
rmp-serde.workspace = true
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUIDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# Error handling
thiserror.workspace = true

# Utilities
bytes.workspace = true
dashmap.workspace = true
tracing.workspace = true
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tempfile.workspace = true
reqwest = { version = "0.12", features = ["json"] }
rand.workspace = true

[lints]
workspace = true
