[package]
name = "warp-compress"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Compression algorithms for warp (CPU and GPU)"

[features]
default = []
gpu = ["dep:cudarc", "dep:warp-gpu", "cudarc?/cuda-12060"]

[dependencies]
zstd.workspace = true
lz4_flex.workspace = true
thiserror.workspace = true
tracing.workspace = true
rayon.workspace = true

# GPU support (optional)
cudarc = { workspace = true, optional = true }
warp-gpu = { path = "../warp-gpu", optional = true }

[dev-dependencies]
criterion.workspace = true
rand.workspace = true
tempfile.workspace = true
proptest.workspace = true

[[bench]]
name = "compression"
harness = false
