[package]
name = "warp-crdt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Conflict-free Replicated Data Types (CRDTs) for warp distributed storage"

[dependencies]
serde = { workspace = true }
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true
rand.workspace = true
proptest.workspace = true
serde_json = { workspace = true }
