[package]
name = "warp-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Cryptographic primitives for warp"

[dependencies]
chacha20poly1305.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
argon2.workspace = true
rand.workspace = true
thiserror.workspace = true
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
proptest.workspace = true
