[package]
name = "warp-dpu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "DPU (Data Processing Unit) offload for warp - abstract interface with BlueField reference implementation"

[features]
default = ["stub"]
# Stub backend for testing without DPU hardware
stub = []
# NVIDIA BlueField DPU via DOCA SDK
bluefield = []

[dependencies]
# Workspace dependencies
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
parking_lot.workspace = true
async-trait.workspace = true
tokio.workspace = true

# CPU fallback implementations
blake3.workspace = true
chacha20poly1305.workspace = true
zstd.workspace = true
lz4_flex.workspace = true

# Erasure coding fallback
reed-solomon-simd = "3.0"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "throughput"
harness = false
