[package]
name = "warp-edge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Edge intelligence and health tracking for Portal distributed storage"

[dependencies]
# Internal crates
portal-net.workspace = true
warp-hash.workspace = true

# Concurrency
dashmap.workspace = true
tokio.workspace = true

# Serialization
serde.workspace = true
rmp-serde.workspace = true

# Error handling
thiserror.workspace = true

# Utilities
bytes.workspace = true
tracing.workspace = true

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tempfile.workspace = true
proptest.workspace = true
test-case.workspace = true
serde_json = "1.0"

[features]
default = []

[lints]
workspace = true
