[package]
name = "warp-gpu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "GPU acceleration primitives for warp (CUDA via cudarc)"

[features]
default = ["cuda-12060"]
cuda-12060 = ["cudarc/cuda-12060"]

[dependencies]
cudarc = { workspace = true, features = ["cuda-12060", "dynamic-loading", "nvrtc"] }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
blake3 = { workspace = true }
chacha20poly1305 = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }
test-case = { workspace = true }

[[bench]]
name = "memory"
harness = false
