[package]
name = "warp-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "I/O utilities for warp (chunking, file walking, buffers)"

[dependencies]
bytes.workspace = true
memmap2.workspace = true
walkdir.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "sync", "rt", "rt-multi-thread", "time"] }

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true
rand.workspace = true

[[bench]]
name = "chunking"
harness = false
