[package]
name = "warp-sched"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "GPU-accelerated chunk scheduling for Portal distributed storage"

[dependencies]
# Internal crates
warp-gpu.workspace = true
warp-edge.workspace = true
warp-hash.workspace = true

# GPU acceleration (optional)
cudarc = { workspace = true, optional = true }

# Async runtime
tokio = { workspace = true, features = ["time", "sync"] }

# Concurrency
dashmap.workspace = true
rayon.workspace = true

# Serialization
serde.workspace = true
rmp-serde.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Utilities
bytes.workspace = true

# Time handling
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12.5"
static_assertions = "1.1.0"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tempfile.workspace = true
proptest.workspace = true
test-case.workspace = true
criterion.workspace = true
serde_json = "1.0"

[features]
default = []
gpu = ["cudarc"]

[[bench]]
name = "scheduler"
harness = false

[lints]
workspace = true
