[package]
name = "warp-stream"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Real-time streaming pipeline with triple-buffer orchestration"

[dependencies]
warp-gpu = { workspace = true }
warp-crypto = { workspace = true }
warp-io = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
chacha20poly1305 = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }
test-case = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }

[[bench]]
name = "encryption"
harness = false
