[package]
name = "warp-telemetry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Telemetry, logging, and metrics for Portal distributed storage"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["time", "sync"] }

# Concurrency
dashmap.workspace = true
parking_lot = "0.12.5"

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror.workspace = true

# Logging/Tracing
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tempfile.workspace = true
proptest.workspace = true
test-case.workspace = true

[lints]
workspace = true
